feat: :zap: Se terminó el form para añadir colaborador

--- a/org/src/components/reset.css
+++ b/org/src/components/reset.css
@@ -8,6 +8,7 @@
   --color-blanco-medio: #f2f2f2;
   --color-blanco: #ffffff;
   --color-negro: #212121;
+  --color-hover: #95FFD4;
 
   --fondo-programacion: #d9f7e9;
   --destaque-programacion: #57c278;
