--- a/org/src/components/Form/CardForm/CardForm.css
+++ b/org/src/components/Form/CardForm/CardForm.css
@@ -14,6 +14,7 @@
 .card-form input {
   font-family: var(--montserrat);
   font-size: 16px;
+  font-weight: 700;
   background-color: var(--color-blanco);
   width: 100%;
   box-shadow: 10px 10px 30px  rgb(0, 0, 0, 0.1);
@@ -21,4 +22,5 @@
   padding: 30px 20px;
   outline-color: var(--color-azul);
   margin: 8px 0px;
+  box-sizing: border-box;
 }
