--- a/org/src/components/Colaborador/Colaborador.css
+++ b/org/src/components/Colaborador/Colaborador.css
@@ -1,11 +1,11 @@
 .colaborador {
-  width: 280px;
+  width: 260px;
   margin-bottom: 24px;
   padding: 0px 20px;
 }
 
 .colaborador .encabezado {
-  background-color: var(--color-azul);
+  /*background-color: var(--color-azul);*/
   border-radius: 10px 10px 0 0;
 }
 
@@ -21,15 +21,13 @@
   background: var(--color-blanco);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
   border-radius: 0 0 10px 10px;
-  padding-top: 90px;
-  padding-bottom: 40px;
-  min-height: 100px;
+  padding: 60px;
+  min-height: 80px;
 }
 
 .colaborador .info h4 {
   font-weight: bold;
   font-size: 18px;
-  color: var(--color-azul);
   line-height: 22px;
   margin-bottom: 8px;
 }
@@ -39,6 +37,6 @@
   font-size: 18px;
   padding: 0 24px;
   line-height: 22px;
-  font-weight: 400;
+  font-weight: 700;
   margin: 0px;
 }
