--- a/org/src/components/Equipo/Colaborador/Colaborador.css
+++ b/org/src/components/Equipo/Colaborador/Colaborador.css
@@ -1,4 +1,5 @@
 .colaborador {
+  position: relative;
   width: 260px;
   margin-bottom: 24px;
   padding: 0px 20px;
@@ -39,4 +40,10 @@
   line-height: 22px;
   font-weight: 700;
   margin: 0px;
+}
+
+.eliminar {
+  position: absolute;
+  top: 5px;
+  right: 25px;
 }
