--- a/org/src/components/Form/Form.css
+++ b/org/src/components/Form/Form.css
@@ -8,13 +8,15 @@
 .formulario form {
   max-width: 80%;
   background-color: #f7f7f7;
-  box-shadow: 7px 7px 15px rgba(0, 0, 0, 25%);
+  box-shadow: 7px 7px 15px rgba(25%, 25%, 25%, 25%);
   border-radius: 20px;
   padding: 8px 100px;
+  margin: 0px 20px;
 }
 
 .formulario h2 {
   font-size: 32px;
   font-weight: 400;
   color: var(--color-fuente);
+  text-align: center;
 }
