--- a/org/src/components/Form/Form.css
+++ b/org/src/components/Form/Form.css
@@ -2,16 +2,17 @@
   font-family: var(--titulo-prata);
   display: flex;
   justify-content: center;
-  margin: 80px 0px;
+  margin: 60px 30px;
+  flex-wrap: wrap;
 }
 
 .formulario form {
-  max-width: 80%;
   background-color: #f7f7f7;
-  box-shadow: 7px 7px 15px rgba(25%, 25%, 25%, 25%);
+  box-shadow: 15px 15px 15px rgba(0, 0, 0, 25%);
   border-radius: 20px;
-  padding: 8px 100px;
+  padding: 8px 40px;
   margin: 0px 20px;
+  flex: 1;
 }
 
 .formulario h2 {
