--- a/src/components/Form/ListForm/ListForm.css
+++ b/src/components/Form/ListForm/ListForm.css
@@ -11,7 +11,8 @@
   display: block;
 }
 
-.card-list-form select, option {
+.card-list-form select,
+option {
   font-family: var(--montserrat);
   font-size: 16px;
   font-weight: 700;
